--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,11 +4,14 @@
 name: Node.js CD
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+  #push:
+  #  branches: [ "main" ]
+  #pull_request:
+  #  branches: [ "main" ]
+  workflow_run:
+    workflows: ["Run Tests"]
+    types:
+      - completed
 jobs:
   build:
 
