--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,10 +11,10 @@ on:
   workflow_run:
     workflows: ["Run Tests"]
     types:
-      - success
+      - completed
 jobs:
   build:
-
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: self-hosted
 
     strategy:
