--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,15 @@ on:
     branches:
       - "main"
 jobs:
+  hello:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Compile
+        run: echo Hello word
   tests:
+    needs: [hello]
     runs-on: ubuntu-latest
   
     steps:
@@ -19,3 +27,6 @@ jobs:
         run: npm ci
       - name: Run Tests
         run: npm test
+  deploy:
+    needs: [tests]
+    uses: ./.github/workflows/node.js.yml
