--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,10 +8,11 @@ on:
   #  branches: [ "main" ]
   #pull_request:
   #  branches: [ "main" ]
-  workflow_run:
-    workflows: ["Run Tests"]
-    types:
-      - completed
+  # workflow_run:
+  #   workflows: ["Run Tests"]
+  #   types:
+  #     - completed
+  workflow_call
 jobs:
   build:
     #if: ${{ github.event.workflow_run.conclusion == 'success' }}
